[package]
name = "homomorphic-commitments"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }
ancient-rand = { version = "0.3", package = "rand", optional = true }
bn = { version = "0.4.3", optional = true }

[features]
default = ["pedersen", "elgamal", "groth"]
pedersen = ["dep:curve25519-dalek", "dep:rand"]
elgamal = ["dep:curve25519-dalek", "dep:rand"]
groth = ["dep:ancient-rand", "dep:bn"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "commitments"
harness = false